<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarWallet</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Login</string>
    <string name="title_section2">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="rePassword">Retype Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="photoContent">Photo of the user </string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_section3">Section 3</string>
    <string name="BarcodePay">Barcode Payment</string>
    <string name="Voucher">Voucher System</string>
    <string name="AddVoucher">Add a new Voucher!</string>
    <string name="title_activity_voucher">VoucherActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>